--- a/frontend/recipe-app/src/App.css
+++ b/frontend/recipe-app/src/App.css
@@ -1,38 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+* {
+  font-family: 'Fredoka One', cursive !important;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.background-div {
+  /* background-color: #5cdb95; */
+  background: #5cdb95;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to top, #05386b, #5cdb95);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #05386b, #5cdb95); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.bold-text {
+  font-size: 80px;
+  font-family: 'Fredoka One', cursive;
+  color: #edf5e1;
+  margin: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-bar {
+  background-color: #5cdb9500 !important;
 }
